# smv

./: .travis.yml  CMakeLists.txt  README  README.md  README.ru  main.c  mybasename  smv.1  smv.c  test.sh
